# metwork-backend

./: .env  .env.example  .gitignore  .gitmodules  README.md  common.env  conda-env.yml  conda-export.txt  conda-requirements.txt  init_db.py  local.env  manage.py  manage_reactions.py  metwork.ini  mkdocs.yml  pip-requirements.txt  pyproject.toml  run-api.sh  run-tests.sh  run-worker.sh  set-env.sh  test.env  user_usage.py
base/: admin.py  apps.py
base/forms/: __init__.py  registration.py  reset_password.py
base/migrations/: 0001_initial.py  0002_auto_20180625_1406.py  0003_auto_20180625_1413.py  0004_auto_20180730_1547.py  0005_auto_20180904_1626.py  0006_molecule_chemdoodle_json.py  0007_apistatus.py  0011_tag.py  (+10 more)
django_rdkit/: __init__.py  apps.py  config.py  operations.py
docker/: Dockerfile  conda-requirements.txt  docker-compose.yml  docker.env  initdb-metwork.sh  pip-requirements.txt  run-worker.sh
envs/: local.env  test-worker.env  test.env
fragmentation/: admin.py  apps.py  serializers.py
install/: conda-requirements.txt  install-depencies.sh  python-depencies.sh
libmetgem/: __init__.py  common.pxd  common.pyx  cosine.py  cosine.pyx  filter.pxd  filter.pyx  mgf.py  mgf.pyx  network_generation.py
metabolization/: admin.py  apps.py
metwork_backend/: celery.py  urls.py  wsgi.py
news/: export_json.py
notebooks/: analyse.py  create_reaction.ipynb  db_analyse.ipynb  findMCS.ipynb  test--cfm_id.ipynb
scripts/: dump_data.sh  import_reaction_process.py  init-dataset.sh  init-db.sh  install-all.sh  install-cfm_id.sh  install-python-depencies.sh  msconvert.sh  run-api.sh  run-dev.sh  run-docker.sh  run-tests.sh  run-worker.sh  set-env.sh
(+199 files in other folders)
