[tool.poetry]
name = "metwork-backend"
version = "0.1.0"
description = ""
authors = ["Yann Beauxis <pro@yannbeauxis.net>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
rope = "^0.17.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
